# scres

./: Cargo.toml  Readme.md  build.rs
example/: scres.c
src/: c_api.rs  lib.rs  resampler.rs
